catch lost FOCUS_POINTER_ROOT FOCUS_IN events

it seems we can "loose" focus reversions when the closing client hold a grab
(eg. the screenlocker or some games) thus we catch the typical pattern
(though we don't want the focus on the root anyway)

BUG: 348935
FIXED-IN: 5.5
REVIEW: 126033